--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import Logo from "./icons/Logo.astro";
 ---
 
 <header class="Header">
-  <a href="#hero" class="Header__logo">
+  <a href="#home" class="Header__logo">
     <Logo/>
     tinonav
   </a>
