--- a/src/scss/sections/_projects.scss
+++ b/src/scss/sections/_projects.scss
@@ -27,7 +27,8 @@
 
 .Project{
   margin: 0 auto;
-  background: rgba(0, 0 , 0 ,.05);
+  // background: rgba(0, 0 , 0 ,.05);
+  background: rgb(11, 20, 34);
   // background-image: linear-gradient(to left top, #131561, #181f76, #1c2a8c, #1d36a3, #1b42bb, #1b42bb, #1b42bb, #1b42bb, #1d36a3, #1c2a8c, #181f76, #131561);
   // background: linear-gradient(to bottom, #1e5799 0%,rgba(125,185,232,0) 50%);
   // background: url('/img/bg1.webp') no-repeat bottom center;
