--- a/src/sections/Welcome.astro
+++ b/src/sections/Welcome.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section class="Welcome" id="welcome">
+<section class="Welcome" id="home">
   <h1>
     Freelance en
     <span>Desarrollo Web</span>
