--- a/src/sections/About.astro
+++ b/src/sections/About.astro
@@ -8,7 +8,7 @@ import Counter from "@/components/Counter.astro";
   <div class="AboutMe__container">
     <img src="/img/me.jpg" srcset="/img/me@md.webp 500w, /img/me@lg.webp 1000w, /img/me@xl.webp 1500w" loading="lazy" alt="Florentino Navarro" class="AboutMe__img">
     <div class="AboutMe__text">
-      <p>Soy Florentino Navarro, un desarrollador con mas de 15 años de experiencia, especializado en crear sitios únicos y funcionales. Desarrollo páginas modernas, rápidas y optimizadas que impulsan tu negocio. Atención personalizada, precios justos y resultados que hablan por sí solos.</p>
+      <p>Soy Florentino Navarro Díaz, un desarrollador con mas de 15 años de experiencia, especializado en crear sitios web únicos y funcionales. Desarrollo páginas modernas, rápidas y optimizadas que impulsan tu negocio. Atención personalizada, precios justos y resultados que hablan por sí solos.</p>
       <p class="AboutMe__text--bold">¡Hagamos realidad tu proyecto digital!</p>
       <ul class="AboutMe__stats">
         <li class="stat stat1">
